Fixed like & verify buttons beeing behind the user-block and the text beeing to big on some sizes

--- a/assets/style/mobile.article.css
+++ b/assets/style/mobile.article.css
@@ -59,7 +59,6 @@
 .like-btn {
     position: fixed;
     top:80px;
-    z-index: 1;
     right: 20px;
     font-size: min(6vw, 50px);
     background-color: rgb(83, 83, 83);
@@ -67,6 +66,7 @@
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
     cursor: pointer;
+    z-index: 2;
 }
 
 
